apps/epgstation/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: default

---
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: default

---
apiVersion: v1
kind: Service
metadata:
  name: app-node

spec:
  type: NodePort
  ports:
    - name: "40773"
      port: 40773
      nodePort: 40773
      targetPort: 8888
      protocol: TCP
  selector:
    app: default
